Updates to my superpower info

--- a/power.html
+++ b/power.html
@@ -19,7 +19,7 @@
         <!-- My backstory -->
         <div>
             <h3><i>The Beginnings...</i></h3>
-            <q>Not just your average superhero</q>
+            <q><i>Not just your average superhero</i></q>
             <p>Now this is a story all about how, statistics got flipped
             turned upside down. I'd like to take a minute, just sit right there. 
             I'll tell you how I became the outlier of Saline.</p>
@@ -64,7 +64,6 @@
 
         <!-- My limitations -->
         <h3><i>Too much of a good thing...</i></h3>
-        <q>The probability of your positive outcome is low</q>
         <p>For all superheros, there is a limit. Nothing in life has 
         a completely determined outcome and there is nothing I can 
         do to make fate certain. I can range the probability of things
@@ -88,6 +87,7 @@
 
         <!-- Nemesis -->
         <h3><i>The Certainty Sinner...</i></h3>
+        <q><i>Your doom has been determined</i></q>
         <p>Your evil neighborhood menace: The Certainty Sinner. With a plush, purple cape and 
         a cane made of gold, the Certainty Sinner casts a remarkable shadow 
         across your local communities. He uses his powers of predicting the future
